--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/example2.html"></include>
+    <header>Header</header>
+    <main>Main</main>
+    <footer>footer</footer>
   </body>
 </html>
