--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>SIMPLY CHOCOLATE</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example2.html"></include>
-    <header>Header</header>
-    <main>Main</main>
-    <footer>footer</footer>
+    <header>
+      <include src="./partials/header.html"></include>
+    </header>
+    <main>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/qualities.html"></include>
+      <include src="./partials/made.html"></include>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/sellers.html"></include>
+      <include src="./partials/reviews.html"></include>
+      <include src="./partials/hero-bg.html"></include>
+    </main>
+    <footer class="footer">
+      <include src="./partials/footer.html"></include>
+    </footer>
+    <include src="./partials/modal-buy.html"></include>
+    <include src="./partials/modal-review.html"></include>
+    <include src="./partials/modal-subscribe.html"></include>
+    <script src="./modal.js"></script>
+    <script src="./modalbuy.js"></script>
+    <script src="./modalsubs.js"></script>
   </body>
 </html>
