--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/qualities.html"></include>
+      <include src="./partials/sensation.html"></include>
       <include src="./partials/made.html"></include>
       <include src="./partials/products.html"></include>
       <include src="./partials/sellers.html"></include>
