UPDATE Agregar header y menú

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,12 @@
     <footer class="footer">
       <include src="./partials/footer.html"></include>
     </footer>
+    <include src="./partials/toggle-menu.html"></include>
     <include src="./partials/modal-buy.html"></include>
     <include src="./partials/modal-review.html"></include>
     <include src="./partials/modal-subscribe.html"></include>
     <script src="./modal.js"></script>
+    <script src="./modalnav.js"></script>
     <script src="./modalbuy.js"></script>
     <script src="./modalsubs.js"></script>
   </body>
