Benefits section finished

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <include src="./partials/hero.html"></include>
-      <include src="./partials/qualities.html"></include>
+      <include src="./partials/benefits.html"></include>
       <include src="./partials/sensation.html"></include>
       <include src="./partials/made.html"></include>
       <include src="./partials/products.html"></include>
